plugins {
	id 'org.springframework.boot' version '2.6.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.noodle'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'com.auth0:java-jwt:3.18.2'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.2'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
	runtimeOnly 'org.postgresql:postgresql:42.3.1'
	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.22'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'
	testImplementation 'org.springframework.security:spring-security-test:5.5.1'
}

test {
	useJUnitPlatform()
}
